  is internal (external applications are expected to use RAPI), the impact
  of this incompatible change should be limited.
- Queries for nodes, instances, groups, backups and networks are now
  exclusively done via the luxi daemon. Legacy python code was removed,
  as well as the --enable-split-queries configuration option.

New features
~~~~~~~~~~~~

- Instance moves, backups and imports can now use compression to transfer the
  instance data.
- Node groups can be configured to use an SSH port different than the
  default 22.

New dependencies
~~~~~~~~~~~~~~~~
The following new dependencies have been added:

For Haskell:

- ``zlib`` library (http://hackage.haskell.org/package/base64-bytestring)

- ``base64-bytestring`` library (http://hackage.haskell.org/package/zlib),
  at least version 1.0.0.0


Version 2.10.0 alpha1
---------------------

*(unreleased)*

Incompatible/important changes
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Adding disks with 'gnt-instance modify' now waits for the disks to sync per
  default. Specify --no-wait-for-sync to override this behavior.
- The Ganeti python code now adheres to a private-module layout. In particular,
  the module 'ganeti' is no longer in the python search path.
- On instance allocation, the iallocator now considers non-LVM storage
  properly. In particular, actual file storage space information is used
  when allocating space for a file/sharedfile instance.
- When disabling disk templates cluster-wide, the cluster now first
  checks whether there are instances still using those templates.
- 'gnt-node list-storage' now also reports storage information about
  file-based storage types.

New features
~~~~~~~~~~~~

- KVM hypervisors can now access RBD storage directly without having to
  go through a block device.
- A new command 'gnt-cluster upgrade' was added that automates the upgrade
  procedure between two Ganeti versions that are both 2.10 or higher.
- The move-instance command can now change disk templates when moving